k8s/staging/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: karateflow-stg
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
